<resources>
    <string name="app_name">Tarkov Helper</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_the_tarkov_club_buddy">Welcome\nto the Tarkov Club\nBuddy</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="Name">Your Name</string>
    <string name="choose_your_side">Choose your side</string>
    <string name="save">Save</string>
    <string name="welcome_to_bear_pmc">Welcome to Bear PMC</string>
    <string name="item_name">Item name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="price_colon">Price:</string>
    <string name="no_items_found">No Items Found!</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="register">Register</string>
    <string name="theme">Theme</string>
    <string name="settings">Settings</string>
    <string name="profile">PROFILE</string>
    <string name="search">Search</string>
    <string name="favourites">Favourites</string>
</resources>