<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/welcome_label"
            style="@style/HeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/welcome_to_the_tarkov_club_buddy"
            android:textAlignment="textStart"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewpager"
            android:layout_marginTop="20dp"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_label" />


        <ImageButton

            android:id="@+id/bearBtn"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/bear_fraction_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chooseYourSideTextView" />

        <ImageButton
            android:id="@+id/usecBtn"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginEnd="32dp"
            android:scaleType="fitCenter"
            android:src="@drawable/usec_fraction_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bearBtn" />

        <TextView
            android:id="@+id/enterYourNameTextView"
            style="@style/Heading1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/enter_your_name"
            app:layout_constraintStart_toStartOf="@+id/welcome_label"
            app:layout_constraintTop_toBottomOf="@+id/viewpager" />

        <EditText
            android:id="@+id/enterNameEditText"
            style="@style/RegularEditText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/Name"
            app:layout_constraintStart_toStartOf="@+id/enterYourNameTextView"
            app:layout_constraintTop_toBottomOf="@+id/enterYourNameTextView" />

        <TextView
            android:id="@+id/chooseYourSideTextView"
            style="@style/Heading1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/choose_your_side"
            app:layout_constraintStart_toStartOf="@+id/enterNameEditText"
            app:layout_constraintTop_toBottomOf="@+id/enterNameEditText" />

        <Button
            android:id="@+id/saveBtn"
            style="@style/OutlinedRegularButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bearBtn" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>